--- a/src/app/widgets/add-data/add-data.component.html
+++ b/src/app/widgets/add-data/add-data.component.html
@@ -23,7 +23,7 @@
           <input matInput [(ngModel)]="age">
       </mat-form-field>
     </div>
-    <div class="createRecord__age" [ngClass]="missingInputAge">
+    <div class="createRecord__quartile" [ngClass]="missingInputQuartile">
       <strong>Kvartilis: </strong>
       <mat-form-field appearance="legacy" class="createRecord__quartile-line" [ngClass]="textLine">
           <input matInput [(ngModel)]="quartile">
