--- a/src/app/widgets/header/header.component.html
+++ b/src/app/widgets/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-card class="header">
-  <mat-card-title class="header__title" [routerLink]="''">{{title}}</mat-card-title>
+  <mat-card-title class="header__title" [routerLink]="'/home'">{{title}}</mat-card-title>
   <div class="login">
     <ul class="login__navigation" [ngClass]="mobileNavigation">
       <li *ngIf="!authService.isAuthenticated()" [ngClass]="onMobile" class="login__navigation-item">
@@ -13,6 +13,10 @@
       </li>
       <li  *ngIf="authService.isAuthenticated() && admin" [ngClass]="onMobile" class="login__navigation-item">
         <button class="login__navigation-item-button" [ngClass]="onMobileButton" routerLink="suggests">Ajánlatok</button>
+      </li>
+      <li [ngClass]="onMobile" class="login__navigation-item" (click)="changeView()">
+        <button class="login__navigation-item-button" *ngIf="eraDatas" [ngClass]="onMobileButton">Korszakváltó</button>
+        <button class="login__navigation-item-button" *ngIf="!eraDatas" [ngClass]="onMobileButton">Pénznemváltó</button>
       </li>
     </ul>
   </div>
