--- a/src/app/widgets/suggests-list/suggests-list.component.html
+++ b/src/app/widgets/suggests-list/suggests-list.component.html
@@ -1,92 +1,14 @@
 <div>
-  <div>
-    <mat-form-field appearance="fill">
-      <mat-label>Rekordok száma: {{listRecordNumber}}</mat-label>
-      <mat-select disableRipple>
-        <mat-option (click)="setListRecordNumber(10)">10</mat-option>
-        <mat-option (click)="setListRecordNumber(25)">25</mat-option>
-        <mat-option (click)="setListRecordNumber(50)">50</mat-option>
-        <mat-option (click)="setListRecordNumber(100)">100</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field class="sort__search">
-      <mat-label>Keresés</mat-label>
-      <label>
-        <input matInput maxlength="256" placeholder="Keresés a rekordok között" name="searchOption" [(ngModel)]="searchOption" (keyup)="filterOptions()">
-      </label>
-    </mat-form-field>
-  </div>
-  <div class="paginator">
-    <nav aria-label="..." class="nav d-flex justify-content-center">
-      <ul [ngClass]="pagination" class="flex-wrap">
-        <li class="page-item" [ngClass]="activePage === 1 ? 'disabled' : ''">
-          <a class="page-link" (click)="prevPage()" tabindex="-1">Előző</a>
-        </li>
-        <li class="page-item" *ngFor="let i of pages" [ngClass]="activePage === i ? 'active' : ''">
-          <a class="page-link" (click)="switchPage(i)">{{i}} <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="page-item" [ngClass]="activePage === pages.length ? 'disabled' : ''">
-          <a class="page-link" (click)="nextPage()">Következő</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+  <app-sort-list [filteredPostsList]="filteredPostsList" [eraDatas]="suggestDatas" (listRecord)="setListRecord($event)" (filteredPost)="setSearch($event)"></app-sort-list>
   <div class="error" *ngIf="suggestDatas.length === 0">
     <h1>Nincs adat</h1>
   </div>
   <div *ngIf="suggestDatas.length !== 0">
     <ul>
-      <li class="listData" *ngFor="let dataset of filteredPostsList | paginate: { itemsPerPage: listRecordNumber, currentPage: page }; let i = index">
-        <mat-card>
-          <mat-card-content>
-            <div class="listText">
-              <mat-card-title class="listText__piece-name">#{{dataset.id}}</mat-card-title>
-              <div class="listText__piece">
-                <span><strong>{{dataset.nameType}}: </strong>{{dataset.name}}</span>
-              </div>
-              <div class="listText__piece">
-                <span><strong>Kor ideje: </strong>{{dataset.age}}</span>
-              </div>
-              <div class="listText__piece" *ngIf="dataset.possessions !== ''">
-                <span><strong>Vagyon: </strong>{{dataset.possessions}}</span>
-              </div>
-              <div class="listText__piece" *ngIf="dataset.income !== ''">
-                <span><strong>Jövedelem: </strong>{{dataset.income}}
-                  <span *ngIf="dataset.singleTime !== ''">({{dataset.singleTime}})</span>
-                </span>
-              </div>
-              <div class="listText__piece" *ngIf="dataset.cost !== ''">
-                <span><strong>Fogyasztói ár: </strong>{{dataset.cost}}</span>
-              </div>
-              <div class="listText__piece" *ngIf="dataset.description !== ''">
-                <span><strong>Leírás: </strong>{{dataset.description}}</span>
-              </div>
-              <div class="listText__piece" *ngIf="dataset.source !== ''">
-                <span><strong>Forrás: </strong>{{dataset.source}}</span>
-              </div>
-              <div *ngIf="visible" class="listText__icon">
-                <i class="listText__icon-trash fa fa-trash fa-2x" aria-hidden="true" (click)="deleteData(dataset)"></i>
-                <i class="listText__icon-plane fa fa-paper-plane fa-2x" aria-hidden="true" (click)="postData(dataset)"></i>
-              </div>
-            </div>
-          </mat-card-content>
-        </mat-card>
+      <li class="listData" *ngFor="let dataset of filteredPostsList | paginate: { itemsPerPage: listRecord, currentPage: page }; let i = index">
+        <app-data-table-card [dataset]="dataset" [visible]="visible" (eraDatasEmitter)="deleteData($event)" (postDataset)="postData($event)"></app-data-table-card>
       </li>
     </ul>
-    <div class="paginator">
-      <nav aria-label="..." class="nav d-flex justify-content-center">
-        <ul [ngClass]="pagination" class="flex-wrap">
-          <li class="page-item" [ngClass]="activePage === 1 ? 'disabled' : ''">
-            <a class="page-link" (click)="prevPage()" tabindex="-1">Előző</a>
-          </li>
-          <li class="page-item" *ngFor="let i of pages" [ngClass]="activePage === i ? 'active' : ''">
-            <a class="page-link" (click)="switchPage(i)">{{i}} <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="page-item" [ngClass]="activePage === pages.length ? 'disabled' : ''">
-            <a class="page-link" (click)="nextPage()">Következő</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <app-paginator [listRecordNumber]="listRecord" [filteredPostsList]="filteredPostsList" (pageEmit)="setPage($event)"></app-paginator>
   </div>
 </div>
