--- a/src/app/main/modify-page/modify-page.component.html
+++ b/src/app/main/modify-page/modify-page.component.html
@@ -1,3 +1,4 @@
 <div class="container details">
-  <app-modify [eraData]="eraData"></app-modify>
+  <app-modify></app-modify>
+  <app-modify-currency></app-modify-currency>
 </div>
