--- a/src/app/widgets/add-data/add-data.component.html
+++ b/src/app/widgets/add-data/add-data.component.html
@@ -70,7 +70,7 @@
       </div>
     </div>
   </div>
-  <div class="button">
+  <div>
     <button class="submitButton" *ngIf="admin"  ngbButtonLabel
             (click)="postData({id: generateId(), nameType: eraNames, name: name, age: age, quartile: quartile, possessions: possessions, income: income, singleTime: singleTime, cost: cost, description: description, source: source})">
       Rekord feltöltése
