--- a/src/app/widgets/data-table-card/data-table-card.component.html
+++ b/src/app/widgets/data-table-card/data-table-card.component.html
@@ -8,6 +8,9 @@
       <div class="listText__piece">
         <span><strong>Kor ideje: </strong>{{dataset.age}}</span>
       </div>
+      <div class="listText__piece">
+        <span><strong>Kvartilis: </strong>{{dataset.quartile}}</span>
+      </div>
       <div class="listText__piece" *ngIf="dataset.possessions !== ''">
         <span><strong>Vagyon: </strong>{{dataset.possessions}}</span>
       </div>
