rules fix, adjusted add data overlap

--- a/src/app/main/front-page/front-page.component.html
+++ b/src/app/main/front-page/front-page.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="eraDatas">
-  <div *ngIf="authService.isAuthenticated()" [ngClass]="onMobile">
+  <div *ngIf="authService.isAuthenticated()" [ngClass]="onMobile" class="addData">
     <app-add-data></app-add-data>
   </div>
   <div>
