--- a/src/app/widgets/paginator/paginator.component.scss
+++ b/src/app/widgets/paginator/paginator.component.scss
@@ -1,5 +1,7 @@
+@import "src/global";
+
 .paginator {
-  margin-left: 3em;
+  margin-left: $globalMargin;
   position: relative;
   display: inline-block;
 }
