--- a/src/app/widgets/add-data/add-data.component.scss
+++ b/src/app/widgets/add-data/add-data.component.scss
@@ -1,46 +1,57 @@
 @import "src/global";
 
 .title {
-  margin-left: 3em;
+  margin-left: $globalMargin;
 }
 
 .createRecord {
   position: relative;
-  left: 3em;
+  left: $globalMargin;
+
   &__name {
     display: inline-block;
     margin-right: 1em;
+
     &-type {
-      width: 12em;
+      width: 4 * $globalMargin;
     }
+
     &-line {
       width: 20em;
     }
   }
+
   &__age {
     display: inline-block;
     margin-right: 1em;
+
     &-line {
       width: 20em;
     }
   }
+
   &__quartile {
     display: inline-block;
     margin-right: 1em;
+
     &-line {
       width: 20em;
     }
   }
+
   &__possessions {
     display: inline-block;
     margin-right: 1em;
+
     &-line {
       width: 20em;
     }
   }
+
   &__income {
     display: inline-block;
     margin-right: 1em;
+
     &-singleTime {
       width: 8em;
     }
@@ -48,6 +59,7 @@
       width: 20em;
     }
   }
+
   &__cost {
     display: inline-block;
     margin-right: 1em;
@@ -55,16 +67,20 @@
       width: 20em;
     }
   }
+
   &__description {
     display: inline-block;
     margin-right: 1em;
+
     &-textArea {
       width: 40em;
     }
   }
+
   &__source {
     display: inline-block;
     margin-right: 1em;
+
     &-textArea {
       width: 40em;
     }
@@ -73,8 +89,8 @@
 
 .submitButton {
   width: 10em;
-  height: 3em;
-  margin-left: 3em;
+  height: $globalMargin;
+  margin-left: $globalMargin;
 }
 
 .uploadRecord {
@@ -82,19 +98,10 @@
   height: 20em;
 }
 
-.errorText {
-  color: red;
-}
-
-.missingInput {
-  border: 1px solid red;
-  border-radius: 25px;
-}
-
 .mobileTextLine {
   width: 10em;
 }
 
 .mobileSelector {
-  width: 6em;
+  width: 2 * $globalMargin;
 }
