--- a/src/app/widgets/modify-currency/modify-currency.component.scss
+++ b/src/app/widgets/modify-currency/modify-currency.component.scss
@@ -1,7 +1,1 @@
-@import "src/global";
-
-.submitButton {
-  width: 10em;
-  height: 2.5em;
-  margin-top: 1em;
-}
+@import "src/app/widgets/modify/modify.component";
