--- a/src/app/widgets/sort-list/sort-list.component.scss
+++ b/src/app/widgets/sort-list/sort-list.component.scss
@@ -1,10 +1,12 @@
+@import "src/global";
+
 .sort {
   &__numberOfRecords {
-    margin-left: 3em;
+    margin-left: $globalMargin;
   }
 
   &__search {
     width: auto;
-    margin-left: 3em;
+    margin-left: $globalMargin;
   }
 }
