--- a/src/app/widgets/add-currency/add-currency.component.html
+++ b/src/app/widgets/add-currency/add-currency.component.html
@@ -22,13 +22,37 @@
       </mat-form-field>
     </div>
   </div>
+  <div class="createRecord">
+    <div class="createRecord__currencyOne" [ngClass]="missingCurrencyOne">
+      <strong>Pénznemből: </strong>
+      <mat-form-field appearance="legacy" class="createRecord__currencyOne-line" [ngClass]="textLine">
+        <input matInput [(ngModel)]="currencyTwo">
+      </mat-form-field>
+    </div>
+    <div class="createRecord__currencyTwo" [ngClass]="missingCurrencyTwo">
+      <strong>Pénznembe: </strong>
+      <mat-form-field appearance="legacy" class="createRecord__createRecord__currencyTwo-line" [ngClass]="textLine">
+        <input matInput [(ngModel)]="currencyOne">
+      </mat-form-field>
+    </div>
+    <div class="createRecord__rate" [ngClass]="missingInputRate">
+      <strong>Szorzó: </strong>
+      <mat-form-field appearance="legacy" class="createRecord__rate-line" [ngClass]="textLine">
+        <input matInput [(ngModel)]="rateTwo">
+      </mat-form-field>
+    </div>
+  </div>
   <div class="button">
     <button class="submitButton" *ngIf="admin"  ngbButtonLabel
-            (click)="postData({id: generateId(), currencyOne: currencyOne, currencyTwo: currencyTwo, rate: rate})">
+            (click)="postData({id: generateId(), currencyOne: currencyOne, currencyTwo: currencyTwo, rate: rate});
+             postData({id: generateId(), currencyOne: currencyTwo, currencyTwo: currencyOne, rate: rateTwo});
+              setDefault()">
       Rekord feltöltése
     </button>
     <button class="submitButton" *ngIf="!admin"  ngbButtonLabel
-            (click)="suggestData({id: generateId(), currencyOne: currencyOne, currencyTwo: currencyTwo, rate: rate})">
+            (click)="suggestData({id: generateId(), currencyOne: currencyOne, currencyTwo: currencyTwo, rate: rate});
+             suggestData({id: generateId(), currencyOne: currencyTwo, currencyTwo: currencyOne, rate: rateTwo});
+              setDefault()">
       Rekord ajánlása
     </button>
   </div>
